[package]
name = "rsmemtest"
version = "0.1.0"
authors = ["Shaun Ren <shaun.ren@linux.com>"]

[profile.release]
lto = true

[dependencies]
rand = { version = "0.7.0", features = ["simd_support", "nightly"] }
crc32c = "0.4"
twox-hash = "1.4.1"
region = "2.1.2"
rand_chacha = "0.2.0"
rand_pcg = "0.2.0"
crypto-hash = "^0.3"
rayon = "1.1"
raw-cpuid = "6.1.0"
lazy_static = "1.3.0"
packed_simd = "0.3.3"
getopts = "0.2"
pbr = "1.0"
num_cpus = "1.10"
crossbeam = "0.7"
