[package]
name = "rsmemtest"
version = "0.1.0"
authors = ["Shaun Ren <shaun.ren@linux.com>"]

[profile.release]
lto = true

[dependencies]
rand = { version = "0.8.5", features = ["simd_support", "nightly"] }
crc32c = "0.6"
twox-hash = "1.6"
region = "3.0"
rand_chacha = "0.3"
rand_pcg = "0.3"
crypto-hash = "^0.3"
rayon = "1.5"
raw-cpuid = "10.2"
lazy_static = "1.4"
packed_simd = { version = "0.3.7", package = "packed_simd_2" }
getopts = "0.2"
pbr = "1.0"
num_cpus = "1.13"
crossbeam = "0.8"
